11-gocd/go-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gocd-server
  annotations:
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/secure-backends: "true"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - build.apps.chibifire.com
    secretName: gocd-tls
  rules:
  - host: build.apps.chibifire.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gocd-server
          servicePort: 8153
